Bug 271578 - Artifact in painting text in task items
Summary: Artifact in painting text in task items
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-rememberthemilk (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-04-23 20:14 UTC by Alexey Chernov
Modified: 2011-04-23 20:25 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
The screenshot of the painting artifact (13.22 KB, image/png)
2011-04-23 20:14 UTC, Alexey Chernov
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alexey Chernov 2011-04-23 20:14:39 UTC
Created attachment 59252 [details]
The screenshot of the painting artifact

Version:           unspecified (using KDE 4.6.1) 
OS:                Linux

There's some artifact in painting text in task items of expired tasks: bold text of Due date and task title overlap each other (see the screenshot).

Reproducible: Always
Comment 1 Alexey Chernov 2011-04-23 20:21:02 UTC
Git commit cecd906ad3226ca71a13f3eda49c94c5863d0f9b by Alexey Chernov.
Committed on 23/04/2011 at 20:24.
Pushed by chernov into branch 'master'.

Fix the painting artifact of expired tasks item

Fix the text overlap when task item of expired tasks is painted (due date and task title are overlapped).

BUG: 271578

M  +3    -2    applets/rememberthemilk/taskitemdelegate.cpp     

http://commits.kde.org/kdeplasma-addons/cecd906ad3226ca71a13f3eda49c94c5863d0f9b
Comment 2 Alexey Chernov 2011-04-23 20:23:57 UTC
Git commit 97f26a18cbdc8cae156a1cbea6a17452a491e737 by Alexey Chernov.
Committed on 23/04/2011 at 20:24.
Pushed by chernov into branch '4.6'.

Fix the painting artifact of expired tasks item

Fix the text overlap when task item of expired tasks is painted (due date and task title are overlapped).

BUG: 271578

M  +3    -2    applets/rememberthemilk/taskitemdelegate.cpp     

http://commits.kde.org/kdeplasma-addons/97f26a18cbdc8cae156a1cbea6a17452a491e737
Comment 3 Alexey Chernov 2011-04-23 20:25:24 UTC
Git commit 3b3523da4b5128de2e311530ea8a3e632fd780d8 by Alexey Chernov.
Committed on 23/04/2011 at 20:24.
Pushed by chernov into branch 'KDE/4.6'.

Fix the painting artifact of expired tasks item

Fix the text overlap when task item of expired tasks is painted (due date and task title are overlapped).

BUG: 271578

M  +3    -2    applets/rememberthemilk/taskitemdelegate.cpp     

http://commits.kde.org/kdeplasma-addons/3b3523da4b5128de2e311530ea8a3e632fd780d8