Fix the painting artifact of expired tasks item

Fix the text overlap when task item of expired tasks is painted (due date and task title are overlapped).

BUG: 271578